--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h1>GHOST STORY TEST</h1>
-
+<p>This is a ghost story...</p>
 <router-outlet></router-outlet>
