--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,10 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: solid red;
 }
 
 .button-container {
     display: flex;
     flex-direction: row;
+}
+
+.text-container {
+    width: 800px;
 }
