--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
-  <h1>GHOST STORY</h1>
-  <p>{{currentNode.text}}</p>
+  <h1>A GHOST STORY</h1>
+  <p>NOTE: This is a work in progress, and some of the story lines still need finishing, as well as styling and images.</p>
+  <div class="text-container">
+    <p>{{currentNode.text}}</p>
+  </div>
+  <p>Do you choose to: </p>
   <div class="button-container">
-    <button mat-button (click)="leftClick()"> {{currentNode.left.text}} </button>
-    <button mat-button (click)="rightClick()"> {{currentNode.right.text}} </button>
+    <button mat-button (click)="leftClick()"> {{currentNode.left.button_text}} </button>
+    <button mat-button (click)="rightClick()"> {{currentNode.right.button_text}} </button>
   </div>
 </div>
 
