--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,9 @@
 .text-container {
     width: 800px;
 }
+
+.interactive-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
