--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,13 @@
   <div class="text-container">
     <p>{{currentNode.text}}</p>
   </div>
-  <p>Do you choose to: </p>
-  <div class="button-container">
-    <button mat-button (click)="leftClick()"> {{currentNode.left.button_text}} </button>
-    <button mat-button (click)="rightClick()"> {{currentNode.right.button_text}} </button>
+  <div *ngIf="currentNode.left" class="interactive-container">
+    <p>Do you choose to: </p>
+    <div class="button-container">
+      <button mat-button (click)="leftClick()"> {{currentNode.left.button_text}} </button>
+      <button mat-button (click)="rightClick()"> {{currentNode.right.button_text}} </button>
+    </div>
   </div>
+  
 </div>
 
