--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,32 @@
 .container {
     display: flex;
     flex-direction: column;
+    flex: 1 1 auto; 
     align-items: center;
+    position: absolute; 
+    width: 100%;
+    height: 100%;
+    background: url("../assets/images/courtyard.jpeg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+h1, p {
+    background-color: #F9F9F0;
+    padding: 10px;
+    margin: 20px;
 }
 
 .button-container {
+    background-color: #F9F9F0;
     display: flex;
     flex-direction: row;
 }
 
 .text-container {
-    width: 800px;
+    max-width: 800px;
 }
 
 .interactive-container {
