--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,12 @@
 .container {
     display: flex;
     flex-direction: column;
-    flex: 1 1 auto; 
     align-items: center;
     position: absolute; 
     width: 100%;
     height: 100%;
-    background: url("../assets/images/courtyard.jpeg") no-repeat center center fixed; 
+    /* background: url("../assets/images/courtyard.jpeg") no-repeat center center fixed;  */
+    background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
