--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,12 +5,6 @@
     position: absolute; 
     width: 100%;
     height: 100%;
-    /* background: url("../assets/images/courtyard.jpeg") no-repeat center center fixed;  */
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
 }
 
 h1, p {
@@ -27,6 +21,16 @@ h1, p {
 
 .text-container {
     max-width: 800px;
+}
+
+.fake-button {
+    margin: 0;
+    font-weight: bold;
+    background-color: #F9F9F0;
+}
+
+.fake-button:hover {
+    background-color: #e9e9de;
 }
 
 .interactive-container {
